--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
   "homepage": "https://github.com/tanuj12/nodejs-REST#readme",
   "dependencies": {
     "body-parser": "^1.19.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "express-validator": "^6.6.1",
+    "mongodb": "^3.6.3",
+    "mongoose": "^5.10.14",
+    "multer": "^1.4.2"
   }
 }
