--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.6.3",
     "mongoose": "^5.10.14",
-    "multer": "^1.4.2"
+    "multer": "^1.4.2",
+    "socket.io": "^3.0.1"
   }
 }
